--- a/Lab05/AimProject/src/aims/screen/cart.fxml
+++ b/Lab05/AimProject/src/aims/screen/cart.fxml
@@ -31,8 +31,8 @@
                               <Menu mnemonicParsing="false" text="Update Store">
                                 <items>
                                   <MenuItem mnemonicParsing="false" text="Add Book" />
-                                <MenuItem mnemonicParsing="false" text="Add CD" />
-                                    <MenuItem mnemonicParsing="false" text="Add DVD" />
+                                  <MenuItem mnemonicParsing="false" text="Add CD" />
+                                  <MenuItem mnemonicParsing="false" text="Add DVD" />
                                 </items>
                               </Menu>
                               <MenuItem mnemonicParsing="false" text="View Store" />
@@ -78,9 +78,24 @@
                   </HBox>
                   <TableView fx:id="tblMedia">
                       <columns>
-                      <TableColumn fx:id="colMediaTitle" prefWidth="75.0" text="Title" />
-                      <TableColumn fx:id="colMediaCategory" prefWidth="75.0" text="Category" />
-                        <TableColumn fx:id="colMediaCost" prefWidth="75.0" text="Cost" />
+                          <TableColumn fx:id="colMediaTitle" prefWidth="75.0" text="Title">
+                              <!-- Kết nối cột với thuộc tính "title" -->
+                              <cellValueFactory>
+                                  <PropertyValueFactory property="title"/>
+                              </cellValueFactory>
+                          </TableColumn>
+                          <TableColumn fx:id="colMediaCategory" prefWidth="75.0" text="Category">
+                              <!-- Kết nối cột với thuộc tính "category" -->
+                              <cellValueFactory>
+                                  <PropertyValueFactory property="category"/>
+                              </cellValueFactory>
+                          </TableColumn>
+                          <TableColumn fx:id="colMediaCost" prefWidth="75.0" text="Cost">
+                              <!-- Kết nối cột với thuộc tính "cost" -->
+                              <cellValueFactory>
+                                  <PropertyValueFactory property="cost"/>
+                              </cellValueFactory>
+                          </TableColumn>
                     </columns>
                      <columnResizePolicy>
                         <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
